flapivor/tests/m1/hopix/parser/bad/95-case-8.hopix
val polybox =
  case x { { box = y }<> => y }
